# alpha-aml-platform

./: .env.example  .gitignore  Dockerfile.ai  Dockerfile.airflow  Dockerfile.dashboard  Dockerfile.generator  Dockerfile.processing  EVALUATION.md  Makefile  README.md  docker-compose.yml  efe_system.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_quality_rules.json  retention.json  rules.json  rules.yaml  scenario_catalog.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
docker/: Caddyfile  init-airflow-db.sql  init.sql
docker/migrations/: 002_country_code.sql  003_enterprise_schema.sql  004_parties_and_fx.sql  005_branches_countries_description.sql  006_dq_and_dispositions.sql  007_investigation_ecosystem.sql  008_reset_operational_data.sql  009_alert_priority_score.sql  010_ux_i18n_sar_customers.sql  011_customer_universe_1_23m.sql  012_pipeline_metrics.sql  013_customer_addresses_1_to_5.sql  014_reset_flags_for_alert_budget.sql  015_freesql_reader.sql  016_alert_transaction_archive.sql  017_freesql_reader_grants_fix.sql  018_sar_filed_by_system.sql  019_ml_scores.sql  020_event_log.sql  021_retire_raw_transactions.sql
infra/terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  variables.tf
notebooks/: fraud_anomaly.ipynb
orchestration/: airflow.cfg
orchestration/dags/: _event_log.py  aml_pipeline_audit.py  cleanup_dag.py  cleanup_raw_data.py  dbt_transform.py  disk_guard_dag.py  export_to_bigquery.py  ml_score.py  (+1 more)
scripts/: disk_guard.sh  start.sh
secrets/: .gitkeep
(+50 files in other folders)
