[project]
name = "alpha-aml-platform"
version = "1.0.0"
requires-python = ">=3.11"
description = "Real-time AML / fraud-detection streaming platform"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "orchestration/dags"]

[tool.ruff.lint]
# Keep CI green and useful: unused imports/vars + undefined names.
# Style/complexity rules can come later without blocking the CV sprint.
select = ["E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Airflow DAG packages are imported by path; keep import style flexible.
"orchestration/dags/*" = ["E402"]
